--- a/app/assets/stylesheets/partners/partners.scss
+++ b/app/assets/stylesheets/partners/partners.scss
@@ -15,6 +15,7 @@
   margin-bottom: 20px;
   display: inline-block;
   width: 100%;
+  border: 1px solid #FFF;
 }
 .well.profile_view {
   padding: 10px 0 0;
@@ -77,27 +78,55 @@
     border-top: 2px solid #F4F5FA;
 }
 .profile-img-max{
-    max-height: 120px;
+    max-height: 70px;
     text-align: center;
     display: inline-block;
 }
 .well.profile_view .btn-champions {
     color: #FFF;
-    width: 80%;
+    width: 75%;
     cursor: default;
     border-color: transparent;
 }
 
 .well.profile_view .btn-champions.color1{
     background: linear-gradient(to left, #7597ff, #df9cfa);
+    border: none;
+    font-weight: 100;
+    max-height: 28px;
+    line-height: 28px;
+    padding: 0;
 }
 .well.profile_view .btn-champions.color2{
     background: linear-gradient(to left, #0e94ff, #74ebff);
+    border: none;
+    font-weight: 100;
+    max-height: 28px;
+    line-height: 28px;
+    padding: 0;
 }
 .well.profile_view .btn-champions.color3{
     background: linear-gradient(to left, #ff5b74, #ffab58);
+    border: none;
+    font-weight: 100;
+    max-height: 28px;
+    line-height: 28px;
+    padding: 0;
 }
 
+.well.profile_view .winner-name{
+    color: #3b3c42;
+}
+
+.well.profile_view .winner-title{
+    color: #7d8094;
+    font-size: 16px;
+    font-weight: 100;
+}
+
+.winner-margin{
+    margin-top: 8px;
+}
 .profile_left {
   background: white;
 }
@@ -110,5 +139,5 @@
 }
 
 .card-shadow{
-    box-shadow: 0px 0px 30px rgba(44,101,255,0.16);
+    box-shadow: 0px 0px 16px rgba(44,101,255,0.16);
 }
