--- a/app/views/partners/dashboard/_chart2.html.erb
+++ b/app/views/partners/dashboard/_chart2.html.erb
@@ -3,13 +3,14 @@
   </div>
   <div class="card-body">
     <div class="well profile_view card-shadow">
+        <br />
       <div class="col-sm-12">
         <div class=" col-xs-12 text-center">
           <%= image_tag("partners/user.png", alt: "", id: "avatar_url30", class: "img-circle img-responsive profile-img-max") %>
           <br />
         </div>
-        <div class=" col-xs-12 text-center">
-            <h4 id="kol_30_winner_name">
+        <div class="winner-margin col-xs-12 text-center">
+            <h4 class="winner-name" id="kol_30_winner_name">
               <%= t('partner.dashboard.error.msg') %>
             </h4>
             <div class="btn btn-champions color2">
@@ -24,9 +25,9 @@
         <div class="col-xs-12 col-sm-12 ">
             <div class="card-footer small " >
                 <h3 class="">
-                    <i class="fa fa-jpy" aria-hidden="true"></i> <span id="cur_30_winner_price">0</span>
+                    <i style="font-size: 19px;" class="fa fa-jpy" aria-hidden="true"></i> <span id="cur_30_winner_price">0</span>
                 </h3>
-                <h4 class="text-muted">
+                <h4 class="text-muted winner-title">
                   <%= t('partner.dashboard.chart2.title') %>
                 </h4>
 
